--- a/htdocs/Authors.htm
+++ b/htdocs/Authors.htm
@@ -38,13 +38,13 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
   <tr> 
     <td colspan="3">&nbsp;</td>
   </tr>
-  <tr>
+  <tr> 
     <td colspan="3"><!-- #BeginEditable "Text" --> 
       <h2>John Adcock</h2>
       <blockquote> 
         <p>John is the founder of the project. He did huge amounts of full time 
           development over a three-month period during a lucky work break on versions 
-          1.0 through 1.06 Beta 4. He did most of the work cleaning, translating 
+          1.0 through 1.6 Beta 4. He did most of the work cleaning, translating 
           and legalizing Multidec. He put into code, the world's first open-source 
           real-time 3:2 pulldown software deinterlacer (based on Mark Rejhon's 
           algorithm article). He also designed an open-source video-material deinterlacer 
@@ -54,10 +54,10 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
       <h2><br>
         Mark Rejhon</h2>
       <blockquote> 
-        <p>As of version 1.07, Mark is the project admin. He is also the moderator 
+        <p>As of version 1.7, Mark is the project admin. He is also the moderator 
           of the Internet's largest Home Theater Computers forum at <a href="www.avsforum.com">AVSFORUM</a>. 
           Mark authored the 3:2 pulldown algorithm that forms the basis of the 
-          algorithm implemented into dTV by JohnAd. He also does other programming 
+          algorithm implemented into dTV by John Adcock. He also does other programming 
           tasks like code cleanup, merging, documenting, testing, enhancing of 
           contributors' changes that are submitted to the project. He also enhances 
           dTV with his own changes to certain parts of the code, including improvements 
@@ -69,13 +69,23 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
         <p>Steve is contributing enhancements to the deinterlacing modes including 
           better automatic switching between video mode and 3:2 pulldown mode, 
           and handling of material that has bad 3:2 pulldown. He also worked on 
-          an early version of a 3:2 pulldown deinterlacing algorithm.</p>
+          an early version of a 3:2 pulldown deinterlacing algorithm. In addition, 
+          he is the author of the aspect ratio autodetection code which began 
+          to be included in version 1.9.</p>
       </blockquote>
       <h2><br>
         Michael Samblanet</h2>
       <blockquote> 
         <p>Michael is continuing to upgrade his aspect ratio control code.</p>
       </blockquote>
+      <h2><br>
+        Tom Barry</h2>
+      <p>
+        <blockquote>Tom is the author of several assembly optimizations to the 
+          video deinterlace mode and the addition of the advanced Brooktree/Conexant 
+          chipset settings menu, both of which began to be included in version 
+          1.9. </blockquote>
+      </p>
       <p>Please see the <a href="/Thanks.htm">Thanks</a> file for an incomplete 
         list of the many others who have contributed time and effort.</p>
       <!-- #EndEditable --></td>
