--- a/htdocs/IniFile.HTM
+++ b/htdocs/IniFile.HTM
@@ -47,29 +47,29 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
       <p> 
       <table border="1">
         <tr> 
-          <th>
+          <th> 
             <p>Setting</p>
           </th>
-          <th>
+          <th> 
             <p>Default</p>
           </th>
-          <th>
+          <th> 
             <p>Description</p>
           </th>
         </tr>
         <tr> 
-          <td colspan=3>
+          <td colspan=3> 
             <h3>[Pulldown]</h3>
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>PulldownThresholdLow</p>
           </td>
-          <td>
-            <p>-2000</p>
+          <td> 
+            <p align="center">-2000</p>
           </td>
-          <td>
+          <td> 
             <p>Determines when PAL pulldown detection will detect a noticable 
               improvement in combing.&nbsp; Lower values (more negative) will 
               make detection require more combing to change.&nbsp; Change this 
@@ -77,13 +77,13 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>PulldownThresholdHigh</p>
           </td>
-          <td>
-            <p>2000</p>
+          <td> 
+            <p align="center">2000</p>
           </td>
-          <td>
+          <td> 
             <p>Determines when PAL pulldown detection will go back from movie 
               mode to video mode.&nbsp; This value copes with certain types of 
               video noise, if it is set too low then it will flip back on static 
@@ -92,25 +92,25 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>PulldownRepeatCount</p>
           </td>
-          <td>
-            <p>4</p>
+          <td> 
+            <p align="center">4</p>
           </td>
-          <td>
+          <td> 
             <p>This is the number of times the pulldown pattern must be detected 
               before switching.</p>
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>Threshold32Pulldown&nbsp;</p>
           </td>
-          <td>
-            <p>15</p>
+          <td> 
+            <p align="center">15</p>
           </td>
-          <td>
+          <td> 
             <p>This is the number of pixels per field that need to be similar 
               for NTSC movie detection to detect a triplet of fields from the 
               same movie frame.&nbsp; Higher values will cope with more video 
@@ -118,13 +118,13 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>BitShift</p>
           </td>
-          <td>
-            <p>13</p>
+          <td> 
+            <p align="center">13</p>
           </td>
-          <td>
+          <td> 
             <p>This is used by the NTSC detection code to limit what pixels are 
               the same.&nbsp; This should allow for noise in source.&nbsp; The 
               value is applied to the square of the pixel difference with the 
@@ -132,24 +132,24 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>DiffThreshold</p>
           </td>
-          <td>
-            <p>224</p>
+          <td> 
+            <p align="center">224</p>
           </td>
-          <td>
+          <td> 
             <p>No longer used</p>
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>PulldownRepeatCount2</p>
           </td>
-          <td>
-            <p>2</p>
+          <td> 
+            <p align="center">2</p>
           </td>
-          <td>
+          <td> 
             <p>The number of times an unexpected pattern can occur before switching 
               back to video video mode from a film mode.&nbsp;</p>
           </td>
@@ -160,126 +160,126 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>Name</p>
           </td>
-          <td>
-            <p><i>none</i></p>
+          <td> 
+            <p align="center"><i>none</i></p>
           </td>
-          <td>
+          <td> 
             <p>Which bTV plug-in to load, the dll should be in the path or in 
               the dTV directory.</p>
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>Level1</p>
           </td>
-          <td>
-            <p><i>none</i></p>
+          <td> 
+            <p align="center"><i>none</i></p>
           </td>
-          <td>
+          <td> 
             <p>Parameter passed to the plug-in</p>
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>Level2</p>
           </td>
-          <td>
-            <p><i>none</i></p>
+          <td> 
+            <p align="center"><i>none</i></p>
           </td>
-          <td>
+          <td> 
             <p>Parameter passed to the plug-in</p>
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>x</p>
           </td>
-          <td>
-            <p><i>none</i></p>
+          <td> 
+            <p align="center"><i>none</i></p>
           </td>
-          <td>
+          <td> 
             <p>Parameter passed to the plug-in</p>
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>y</p>
           </td>
-          <td>
-            <p><i>none</i></p>
+          <td> 
+            <p align="center"><i>none</i></p>
           </td>
-          <td>
+          <td> 
             <p>Parameter passed to the plug-in</p>
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>UseKey1</p>
           </td>
-          <td>
-            <p><i>none</i></p>
+          <td> 
+            <p align="center"><i>none</i></p>
           </td>
-          <td>
+          <td> 
             <p>Parameter passed to the plug-in</p>
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>UseKey2</p>
           </td>
-          <td>
-            <p><i>none</i></p>
+          <td> 
+            <p align="center"><i>none</i></p>
           </td>
-          <td>
+          <td> 
             <p>Parameter passed to the plug-in</p>
           </td>
         </tr>
         <tr> 
-          <td colspan=3>
+          <td colspan=3> 
             <h3>[Deinterlace]</h3>
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>EdgeDetect</p>
           </td>
-          <td>
-            <p>625</p>
+          <td> 
+            <p align="center">625</p>
           </td>
-          <td>
+          <td> 
             <p>This values governs the strength of edge detection, use higher 
               values if you think that the video deinterlacing is occurring too 
               often.</p>
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>JaggieThreshold</p>
           </td>
-          <td>
-            <p>73</p>
+          <td> 
+            <p align="center">73</p>
           </td>
-          <td>
+          <td> 
             <p>This values governs the threshold for fine line dtection, use higher 
               values if you get problems with small text</p>
           </td>
         </tr>
         <tr> 
-          <td colspan=3>
+          <td colspan=3> 
             <h3>[ASPECT]</h3>
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>SourceAspect</p>
           </td>
-          <td>
-            <p>0</p>
+          <td> 
+            <p align="center">0</p>
           </td>
-          <td>
+          <td> 
             <p>The most recent aspect ratio used. This is the ratio multiplied 
               by 1000, e.g. a 4:3 ratio is (4 / 3 * 1000) or 1333. A value of 
               0 means to use the aspect ratio of the source material, either 4:3 
@@ -289,50 +289,50 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>CustomSourceAspect</p>
           </td>
-          <td>
-            <p>0</p>
+          <td> 
+            <p align="center">0</p>
           </td>
-          <td>
+          <td> 
             <p>Allows you to specify a custom aspect ratio which may be accessed 
               from the Aspect menu. Normally unused.</p>
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>ScreenAspect</p>
           </td>
-          <td>
-            <p>0</p>
+          <td> 
+            <p align="center">0</p>
           </td>
-          <td>
+          <td> 
             <p>The aspect ratio of the display screen. If 0, the screen is assumed 
               to have square pixels and its resolution is used as the aspect ratio. 
               This is settable via various menu items in the Aspect menu.</p>
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>CustomScreenAspect</p>
           </td>
-          <td>
-            <p>0</p>
+          <td> 
+            <p align="center">0</p>
           </td>
-          <td>
+          <td> 
             <p>Allows you to specify a custom screen aspect ratio which may be 
               accessed from the Aspect menu. Normally unused.</p>
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>Mode</p>
           </td>
-          <td>
-            <p>0</p>
+          <td> 
+            <p align="center">0</p>
           </td>
-          <td>
+          <td> 
             <p>1 if the source is a 4:3 image (even a letterboxed one), 2 if it's 
               an anamorphic 16:9 image, or 0 to stretch the source to the current 
               window size. This is settable via various menu items in the Aspect 
@@ -340,13 +340,13 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>AutoDetectAspect</p>
           </td>
-          <td>
-            <p>0</p>
+          <td> 
+            <p align="center">0</p>
           </td>
-          <td>
+          <td> 
             <p>Controls whether the code analyzes each frame to detect the current 
               aspect ratio. This may be toggled using the "Autodetect" Aspect 
               menu option. If deactivated, you can get dTV to detect the aspect 
@@ -354,13 +354,13 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>LuminanceThreshold</p>
           </td>
-          <td>
-            <p>15</p>
+          <td> 
+            <p align="center">15</p>
           </td>
-          <td>
+          <td> 
             <p>Controls how bright letterbox bars are allowed to get. Valid values 
               are 0 through 127. Any pixel with lower luminance than this is considered 
               black by the aspect ratio detection code. Lowering this value will 
@@ -372,13 +372,13 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>IgnoreNonBlackPixels</p>
           </td>
-          <td>
-            <p>0</p>
+          <td> 
+            <p align="center">0</p>
           </td>
-          <td>
+          <td> 
             <p>When detecting aspect ratios, we often want to ignore TV station 
               logos that extend into the letterbox area. This setting controls 
               how many non-black pixels (see LuminanceThreshold) must be present 
@@ -390,39 +390,39 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>AspectConsistencyTime</p>
           </td>
-          <td>
-            <p>15</p>
+          <td> 
+            <p align="center">15</p>
           </td>
-          <td>
+          <td> 
             <p>This many seconds must pass without a narrower frame appearing 
               before the autodetect code will switch to a wide ratio it hasn't 
               seen before.</p>
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>AspectHistoryTime</p>
           </td>
-          <td>
-            <p>300</p>
+          <td> 
+            <p align="center">300</p>
           </td>
-          <td>
+          <td> 
             <p>The autodetect module will remember previous aspect ratios it's 
               switched to for this many seconds. Ratios that last for less than 
               a second aren't remembered since they're assumed to have been erroneous.</p>
           </td>
         </tr>
         <tr> 
-          <td>
+          <td> 
             <p>ZoomInFrameCount</p>
           </td>
-          <td>
-            <p>60</p>
+          <td> 
+            <p align="center">60</p>
           </td>
-          <td>
+          <td> 
             <p>When autodetecting aspect ratios, if a ratio we've used before 
               (within the past <tt>AspectHistoryTime</tt> seconds) reappears and 
               is consistent for this many frames, switch back to it.</p>
