--- a/htdocs/Links.htm
+++ b/htdocs/Links.htm
@@ -40,7 +40,7 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
       <h3>Related Projects</h3>
-      <p>
+      <p> 
       <blockquote> 
         <p><a href="/PALMovie.htm">PALMovie deinterlace plugin for bTV</a><br>
           <a href="http://vulture.dmem.strath.ac.uk/bt848/">FreeBSD Bt848 Driver 
@@ -51,11 +51,17 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
           Plug-ins</a><br>
           <a href="http://www.core.binghamton.edu/%7Einsomnia/gatos/">GATOS</a></p>
       </blockquote>
-      <h3>Discussion</h3>
+      <h3><br>
+        Discussion</h3>
       <blockquote> 
         <p><a href="http://www.avsforum.com/ubb/Forum12/HTML/004360.html">AV Science 
-          Forum <br>
-          dTV 1.7 Experimental Beta </a>(AVS Forum)<br>
+          Forum</a><br>
+          <a href="http://www.avsforum.com/ubb/Forum12/HTML/005129.html">ANNOUNCEMENT: 
+          dTV 1.9 software video processor is now OUT</a> (AVS Forum)<br>
+          <a href="http://www.avsforum.com/ubb/Forum12/HTML/004448.html">NEW VERSION: 
+          dTV 1.8 released</a> (AVS Forum)<br>
+          <a href="http://www.avsforum.com/ubb/Forum12/HTML/004360.html">dTV 1.7 
+          Experimental Beta </a>(AVS Forum)<br>
           <a href="http://www.avsforum.com/ubb/Forum12/HTML/004188.html">dTV 1.6 
           Experimental Beta</a> (AVS Forum)<br>
           <a href="http://www.avsforum.com/ubb/Forum12/HTML/004067.html">dTV 1.5 
@@ -69,7 +75,7 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
           <a href="http://www.avsforum.com/ubb/Forum12/HTML/003790.html">First 
           Version of NTSC/PAL TV deinterlacing program</a> (AVS Forum)<br>
         </p>
-        </blockquote>
+      </blockquote>
       <!-- #EndEditable --></td>
   </tr>
   <tr> 
