--- a/htdocs/Thanks.htm
+++ b/htdocs/Thanks.htm
@@ -41,21 +41,25 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
     <td colspan="3"><!-- #BeginEditable "Text" --> 
       <p> See <a href="/Authors.htm">Authors</a> for up to date list of developers 
         who have contributed code to the project.</p>
-      <p>See <a href="/MultiDec_ReadMe.txt"> MultiDec_ReadMe.txt</a> for a 
-        list of thanks for the project dTV was based upon.</p>
+      <p>See <a href="/MultiDec_ReadMe.txt"> MultiDec_ReadMe.txt</a> for a list 
+        of thanks for the project dTV was based upon.</p>
       <ol>
-        <li>A big debt a gratitude is due to Mark Rejhon for his 3:2 alogirthm 
+        <li>A big debt a gratitude is due to Mark Rejhon for his 3:2 algorithm 
           and his help testing, promoting dTV but particularly for his vision 
           and his refusal to accept second best.</li>
         <li>Thanks to Paul Samblanet, who contributed the aspect ratio control 
-          code. </li>
+          code.</li>
         <li>Thanks to Daniel Schmelzer for his hard work creating and updating 
           the website. Love the logo!&nbsp;</li>
-        <li>Thanks to Steve Grimm for his work on the old method of 3:2 pulldown.</li>
-        <li>Thanks to everybody on the deinterlace project mailing list</li>
+        <li>Thanks to Steve Grimm for his work on the old method of 3:2 pulldown 
+          and to his contribution of the aspect ratio autodetect code.</li>
+        <li>Thanks to Tom Barry for his optimization of the assembly code and 
+          his contribution of low-level user manipulation of the bt chipset.</li>
+        <li>Thanks to Yvon Quere and Ali for finding bTV and creating the FAQ.</li>
+        <li>Thanks to Jason Castle for updating the todo and bugs pages.</li>
+        <li>Thanks to everybody on the deinterlace project mailing list.</li>
         <li>Thanks to Borg, creator of bTV, for writing the first ever computer 
-          deinterlacing program the inspiration for this project</li>
-        <li>Thanks to Yvon Quere and Ali for finding bTV.&nbsp;</li>
+          deinterlacing program--the inspiration for this project.</li>
         <li>Thanks to all at the AVSForums for your encouragement and help. The 
           HTPC forum is easily the best group on the internet.</li>
         <li>Thanks to the authors of VirtualDub for the the PAL detection algorithm.</li>
