--- a/htdocs/about.htm
+++ b/htdocs/about.htm
@@ -45,12 +45,13 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
       <p>The spiritual home of this project is the Home Theater Computers Section 
         on the <a href="http://www.avsforum.com/ubbcgi/Ultimate.cgi">AV Science 
         Forum</a>.</p>
-      <p>This project is in the very early stages.&nbsp; If you are interested 
-        at all in this project then join the <a href="http://sourceforge.net/mail/?group_id=7420">Mailing 
+      <p>This project is in the early stages.&nbsp; If you are interested at all 
+        in this project then join the <a href="http://sourceforge.net/mail/?group_id=7420">Mailing 
         List</a> and say hello.</p>
       <p>dTV has grown out of the GPL code base of MultiDec and MoreTV, two cable 
         descrambling programs.&nbsp; By combining the GPL parts of both and extending 
-        them both I have been able to create a new legal totally open source project.</p>
+        them both, John Adcock was able to create a new legal totally open source 
+        project.</p>
       <p>Please see the <a href="/downloads.htm">downloads page</a> to download 
         the latest version.</p>
       <!-- #EndEditable --></td>
