--- a/htdocs/Thanks.htm
+++ b/htdocs/Thanks.htm
@@ -55,7 +55,8 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
           and to his contribution of the aspect ratio autodetect code.</li>
         <li>Thanks to Tom Barry for his optimization of the assembly code and 
           his contribution of low-level user manipulation of the bt chipset.</li>
-        <li>Thanks to Yvon Quere and Ali for finding bTV and creating the FAQ.</li>
+        <li>Thanks to Yvon Quere and Ali for finding bTV and Yvon for creating 
+          and updating the FAQ.</li>
         <li>Thanks to Jason Castle for updating the todo and bugs pages.</li>
         <li>Thanks to everybody on the deinterlace project mailing list.</li>
         <li>Thanks to Borg, creator of bTV, for writing the first ever computer 
@@ -63,7 +64,7 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
         <li>Thanks to all at the AVSForums for your encouragement and help. The 
           HTPC forum is easily the best group on the internet.</li>
         <li>Thanks to the authors of VirtualDub for the the PAL detection algorithm.</li>
-        <li>Thanks to Gunnar Thalin for his Area based deinterlacing plug-in which 
+        <li>Thanks to Gunnar Thalin for his area based deinterlacing plug-in which 
           was the basis for the current deinterlacing method.</li>
         <li>Thanks to Steaphan Greene, Øyvind Aabling, Octavian Purdila, Vladimir 
           Dergachev and Christian Lupien&#151;the GATOS developers&#151;for the 
