Fixed Broken Link

--- a/htdocs/developers.htm
+++ b/htdocs/developers.htm
@@ -114,8 +114,7 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
         Algorithm for 3-2 Pulldown Deinterlacing</a></p>
       <h2><br>
         Other Downloads</h2>
-      <p><a href="file:///C%7C/TEMP/Deinterlace.zip">Initial Test version of a 
-        DirectShow Filter</a></p>
+      <p><a href="/Deinterlace.zip">Initial Test version of a DirectShow Filter</a></p>
       <!-- #EndEditable --></td>
   </tr>
   <tr> 
